2003-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/gm-dynamic-full-8.iss,
	VisualMagick/installer/gm-dynamic-full-16.iss: Many C header
	files were not being included in the distribution.  Oops!

2003-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* (index.html, www/*.html): Update to new web page style.
	* scripts/txt2html: Update to output new web page style.
	* ltmain.sh: Updated to latest CVS libtool.
	* magick/tempfile.c (DestroyTemporaryFiles): Function was
	crashing if it was executed twice.

2003-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/delegates.mgk.in: Ralcgm was appending ".ps" to the
	provided output file name, so change cgm delegate command so that
	the input file is delivered via standard input, output is
	re-directed to a file, and anything printed to stderr (such as
	the Ralcgm program name and version) is sent to /dev/null.
	* INSTALL-unix.txt: Added/corrected/improved documentation
	regarding --disable-installed, --enable-shared, and
	--with-modules.
	* VisualMagick/magick/magick_config.h.in: Add more documentation
	and explanatory notes in order to lessen confusion.
	* Many files: Replaced "UseInstalledImageMagick" with
	"UseInstalledMagick" for obvious reasons.

2003-04-04  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* magick/command.c, utilities/gm.c: Print "help" screen for a
	tool when user types "gm tool" or "gm tool -help"
	* magick/command.c, magick/effect.c: add -ordered-dither option.

2003-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* locale/C.mgk: Fixed message associated with
	"UnableToCreateTemporaryFile".
	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Decided
	to return a pathname (if possible), even on failure, for use
	in error reports.  The function return status should be used
	to determine if the function has succeeded.
	* locale/locale.mgk: Updated copyright header.
	* (magick/annotate.c, magick/attribute.c, magick/blob.c,