@@ -53,6 +53,18 @@
 </tr>
 </table>
 <p>
+2003-04-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (ReadTIFFImage): Add support for reading
+        12-bit grayscale TIFFs. Fix reading 16-bit grayscale TIFFs
+        when QuantumDepth=8.<BR>
+  <LI> VisualMagick/installer/gm-dynamic-full-8.iss,
+        VisualMagick/installer/gm-dynamic-full-16.iss: Many C header
+        files were not being included in the distribution.  Oops!
+
+</UL>
+<p>
 2003-04-06  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
